@@ -47,10 +47,17 @@ public class ResponseException extends Exception {
         return responseStatusCode;
     }
 
+    /**
+     * The stacktrace produced by the remote server.
+     */
     public Optional<String> getRemoteStackTrace() {
         return Optional.ofNullable(remoteStackTrace);
     }
 
+    /**
+     * The list of exceptions generated by the server starting with the top-most one followed by its "cause". That
+     * cause is then followed by its cause and so on down the line.
+     */
     public Optional<List<String>> getRemoteExceptionHierarchy() {
         return Optional.ofNullable(remoteExceptionHierarchy);
     }
